--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -7,38 +7,7 @@ footer {
           display: flex;
           justify-content: space-between;
           .footer-left {
-               ul {
-                    margin-top: 10px;
-                    list-style: none;
-                    display: flex;
-                    column-gap: 20px;
-                    li {
-                         a {
-                              text-decoration: none;
-                              font-family: $fonte-alata;
-                              font-weight: normal;
-                              color: #fff;
-                              padding-bottom: 10px;
-                              position: relative;
-                              &::after {
-                                   content: '';
-                                   position: absolute;
-                                   margin-top: 10px;
-                                   top: 50%;
-                                   left: 50%;
-                                   transform: translate(-50%, -50%);
-                                   height: 2px;
-                                   width: 25px;
-                                   background-color: #fff;
-                                   opacity: 0;
-                                   transition: all .4s linear;
-                              }
-                              &:hover::after {
-                                   opacity: 1;
-                              }
-                         }
-                    }
-               }
+               @include menu();
           }
           .footer-right {
                ul {
