--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,7 @@ header .header-area nav {
   align-items: center;
 }
 header .header-area nav .menu-nav ul {
+  margin-top: 10px;
   list-style: none;
   display: flex;
   -moz-column-gap: 20px;
