Alterando o sass da página

--- a/styles/components/_sectiongaleria.scss
+++ b/styles/components/_sectiongaleria.scss
@@ -35,6 +35,14 @@
                gap: 20px;
                .img-galeria {
                     height: 450px;
+                    display: flex;
+                    align-items: flex-end;
+                    padding: 30px;
+                    font-family: $fonte-josefin;
+                    font-weight: 300;
+                    font-size: 30px;
+                    text-transform: uppercase;
+                    color: #fff;
                }
           }
      }
