--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
 @import "./abstract/reset";
 @import "./abstract/container";
 @import "./abstract/variaveis";
+@import "./abstract/stylemenu";
 @import "./components/header";
 @import "./components/sectionvr";
 @import "./components/sectiongaleria";
