--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,4 +1,5 @@
 @import "../abstract/variaveis";
+@import "../abstract/stylemenu";
 
 header {
      background: url(../../images/desktop/image-hero.jpg) center no-repeat;
@@ -16,35 +17,7 @@ header {
                justify-content: space-between;
                align-items: center;
                .menu-nav {
-                    ul {
-                         list-style: none;
-                         display: flex;
-                         column-gap: 20px;
-                         li a {
-                              text-decoration: none;
-                              font-family: $fonte-alata;
-                              font-weight: normal;
-                              color: #fff;
-                              padding-bottom: 10px;
-                              position: relative;
-                              &::after {
-                                   content: '';
-                                   position: absolute;
-                                   margin-top: 10px;
-                                   top: 50%;
-                                   left: 50%;
-                                   transform: translate(-50%, -50%);
-                                   height: 2px;
-                                   width: 25px;
-                                   background-color: #fff;
-                                   opacity: 0;
-                                   transition: all .4s linear;
-                              }
-                              &:hover::after {
-                                   opacity: 1;
-                              }
-                         }
-                    }
+                    @include listMenu();
                }
           }
           .banner-text {
