--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -148,6 +151,14 @@ header .header-area .banner-text span {
 }
 #sectionGaleria .sectionGaleria-area .info-bottom .img-galeria {
   height: 450px;
+  display: flex;
+  align-items: flex-end;
+  padding: 30px;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 300;
+  font-size: 30px;
+  text-transform: uppercase;
+  color: #fff;
 }
 
 footer {
@@ -159,7 +170,6 @@ footer .footer-area {
   justify-content: space-between;
 }
 footer .footer-area .footer-left ul {
-  margin-top: 10px;
   list-style: none;
   display: flex;
   -moz-column-gap: 20px;
